# qtMediaSelector

./: CMakeLists.txt  credentialdialog.cpp  credentialdialog.h  credentialdialog.ui  datamanager.cpp  datamanager.h  dbmanager.cpp  dbmanager.h  helperfunction.cpp  helperfunction.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testdatabaseconnection.cpp  testdatabaseconnection.h
database/: mediaselector.db
tests/: testdatabaseconnection.cpp  testdatabaseconnection.h  testdatabasequeries.cpp  testdatabasequeries.h  testmain.cpp  teststringoperations.cpp  teststringoperations.h
